...
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutModes">

            <TextView
                android:id="@+id/textInfoPlayerTeam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@{chipTeamPlayMode.checked ? `Team 1`: `Player 1`,default=@string/player_team_1}"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupPlayersMode" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTeam1Player1"
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                    app:checkedIcon="@drawable/check"
                    app:checkedIconVisible="true"
                    app:mode="@{GameMode.TEAM}"
                    app:settings="@{homeViewModel.settings.generalSettings}" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSinglePlayerMode"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/single"
                    android:textSize="24sp"
...
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHome">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupGameTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleLine="false"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_x_01"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/_X01"
                    android:textAlignment="center"
...
                    app:checkedIconEnabled="true" />
            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_start_game"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="144dp"
...
