<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="bruzsa.laszlo.dartsapp.model.PlayersEnum" />

        <variable
            name="viewModel"
            type="bruzsa.laszlo.dartsapp.ui.singlex01.SingleX01ViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.singlex01.SingleX01Fragment">

        <TextView
            android:id="@+id/textNamePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top|center_horizontal"
            android:text="@{viewModel.playerName,default=`Default Player`}"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/textScorePlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textScorePlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@{viewModel.score.toString(), default=`501`}"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/listThrows"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNamePlayer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listThrows"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="start|fill_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="20dp"
            android:adapter="@{viewModel.throwsAdapter}"
            android:minWidth="2000dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constrainedWidth="false"
            app:layout_constraintBottom_toTopOf="@+id/includedInputs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textStatPlayer"
            app:layout_constraintTop_toBottomOf="@+id/textScorePlayer" />

        <TextView
            android:id="@+id/textViewStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:fontFamily="monospace"
            android:paddingEnd="10dp"
            android:text="@string/_100_n60_navg_nmax_nmin_nhc"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textScorePlayer" />

        <TextView
            android:id="@+id/textStatPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:fontFamily="monospace"
            android:minWidth="45dp"
            android:text="@{viewModel.stat}"
            android:textAlignment="textStart"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/listThrows"
            app:layout_constraintStart_toEndOf="@+id/textViewStat"
            app:layout_constraintTop_toBottomOf="@+id/textScorePlayer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@{viewModel.legs.toString()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNamePlayer" />

        <include
            android:id="@+id/includedInputs"
            layout="@layout/input_views"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>