package bruzsa.laszlo.dartsapp;


import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class SingleX01Test {

    @Rule
    public ActivityScenarioRule<MainActivity> mActivityScenarioRule =
            new ActivityScenarioRule<>(MainActivity.class);

    @Test
    public void singleX01TestScore() {
        ViewInteraction chip = onView(
                allOf(withId(R.id.chip_x_01), withText("X01"),
                        childAtPosition(
                                allOf(withId(R.id.chipGroupGameTypes),
                                        childAtPosition(
                                                withId(R.id.layoutModes),
                                                0)),
                                0),
                        isDisplayed()));
        chip.perform(click());

        ViewInteraction chip2 = onView(
                allOf(withId(R.id.chipSinglePlayerMode), withText("Single"),
                        childAtPosition(
                                allOf(withId(R.id.chipGroupPlayersMode),
                                        childAtPosition(
                                                withId(R.id.layoutModes),
                                                1)),
                                1),
                        isDisplayed()));
        chip2.perform(click());

        ViewInteraction materialButton = onView(
                allOf(withId(R.id.button_start_game), withText("Start Game!"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.nav_host_fragment_content_main),
                                        0),
                                2),
                        isDisplayed()));
        materialButton.perform(click());

        ViewInteraction chip3 = onView(
                allOf(withText("  1  "),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.numPad),
                                        0),
                                0),
                        isDisplayed()));
        chip3.perform(click());

        ViewInteraction chip4 = onView(
                allOf(withText("  2  "),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.numPad),
                                        0),
                                1),
                        isDisplayed()));
        chip4.perform(click());

        ViewInteraction chip5 = onView(
                allOf(withText("<-"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.numPad),
                                        3),
                                2),
                        isDisplayed()));
        chip5.perform(click());

        ViewInteraction chip6 = onView(
                allOf(withText("OK"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.numPad),
                                        3),
                                0),
                        isDisplayed()));
        chip6.perform(click());

        ViewInteraction textView = onView(
                allOf(withId(R.id.textScorePlayer), withText("500"),
                        withParent(withParent(withId(R.id.nav_host_fragment_content_main))),
                        isDisplayed()));
        textView.check(matches(withText("500")));

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.dartsX01ThrowItem), withText("1"),
                        withParent(withParent(withId(R.id.listThrows))),
                        isDisplayed()));
        textView2.check(matches(withText("1")));

        ViewInteraction textView3 = onView(
                allOf(withText("0"),
                        withParent(withParent(withId(R.id.nav_host_fragment_content_main))),
                        isDisplayed()));
        textView3.check(matches(withText("0")));

        ViewInteraction textView4 = onView(
                allOf(withText("0"),
                        withParent(withParent(withId(R.id.nav_host_fragment_content_main))),
                        isDisplayed()));
        textView4.check(matches(withText("0")));

        ViewInteraction textView5 = onView(
                allOf(withId(R.id.textStatPlayer),
                        withParent(withParent(withId(R.id.nav_host_fragment_content_main))),
                        isDisplayed()));
        textView5.check(matches(withText("""
                0
                0
                1
                1
                1
                -""")));

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
